Text "defect density" changed to "defect impact"

--- a/ceeq/apps/defects_density/templates/dd_detail.html
+++ b/ceeq/apps/defects_density/templates/dd_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Defect Density Detail{% endblock %}
+{% block title %}Defect Impact Detail{% endblock %}
 
 {% block body %}
     <div class="container">
@@ -36,7 +36,7 @@
             <br>
 
             <div class="row">
-                <legend>Component Defect Density</legend>
+                <legend>Component Defect Impact</legend>
             </div>
             <div class="row" style="margin-bottom: 10px;">
                 <div class="col-md-1"></div>
