--- a/ceeq/apps/projects/templates/projects_dd_start.html
+++ b/ceeq/apps/projects/templates/projects_dd_start.html
@@ -5,10 +5,10 @@
     <br><br>
     <div class="container">
         <ul id="subnav-tabs" class="nav nav-tabs">
-            <li><a href="#dd_detail" data-toggle="tab">Current Defects Density</a> </li>
-            <li><a href="#dd_trend" data-toggle="tab">Trending Defects Density</a> </li>
+            <li><a href="#dd_detail" data-toggle="tab">Current Defect Impact</a> </li>
+            <li><a href="#dd_trend" data-toggle="tab">Trending Defect Impact</a> </li>
             <li><a href="#ceeq_trend" data-toggle="tab">Trending CEEQ Score</a> </li>
-            <li><a href="#dd_history" data-toggle="tab">History Defects Density</a> </li>
+            <li><a href="#dd_history" data-toggle="tab">History Defect Impact</a> </li>
         </ul>
     </div>
 
