--- a/ceeq/apps/projects/templates/projects_start.html
+++ b/ceeq/apps/projects/templates/projects_start.html
@@ -9,7 +9,7 @@
             <li><a href="#score_overall" data-toggle="tab">CEEQ Score</a> </li>
             {% if user.is_superuser %}
                 <li><a href="#framework_parameter" data-toggle="tab">Framework Parameters</a> </li>
-                <li><a href="#defects_density_admin" data-toggle="tab">Defects Density Admin</a> </li>
+                <li><a href="#defects_density_admin" data-toggle="tab">Defect Impact Admin</a> </li>
             {% endif %}
         </ul>
     </div>
