--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -151,7 +151,7 @@
                     <tr>
                         <th style="background-color: lightcyan">Component Name</th>
                         <th style="background-color: lightcyan">Weight</th>
-                        <th style="background-color: lightcyan">Defects Density</th>
+                        <th style="background-color: lightcyan">Defect Impact</th>
 
                         <th colspan="3" style="background-color: lavender; text-align: center">Blocker</th>
                         <th colspan="3" style="background-color: lavender; text-align: center">Critical</th>
