Handle ceeq score below zero

--- a/ceeq/apps/projects/templates/project_dd_detail.html
+++ b/ceeq/apps/projects/templates/project_dd_detail.html
@@ -7,8 +7,8 @@
             <p>
                 {% if project.score == -1 %}
                     No created issues
-                {% elif project.score == -2 %}
-                    Out of Range
+                {% elif project.score == 20 %}
+                    <strong>CEEQ Score: &nbsp;&nbsp;</strong>Out of Range
                 {% elif project.score == -3 %}
                     No open issues
                 {% elif project.score == -4 %}
