--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -22,6 +22,11 @@
             {% if superuser %}
                 <div class="row" style="margin-bottom: 10px;">
                     <div class="col-md-1"></div>
+                    <div class="col-md-2" style="text-align: left;font-size: 18px;">JIRA Version</div>
+                    <div class="col-md-8">{{ form.jira_version }}</div>
+                </div>
+                <div class="row" style="margin-bottom: 10px;">
+                    <div class="col-md-1"></div>
                     <div class="col-md-2" style="text-align: left;font-size:18px;">Active</div>
                     <div class="col-md-1">{{ form.active }}</div>
                     <div class="col-md-7">Flag to track JIRA Project.</div>
