--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -24,9 +24,13 @@
                     <div class="col-md-1"></div>
                     <div class="col-md-2" style="text-align: left;font-size: 18px;">JIRA Version</div>
                     <div class="col-md-8">
-                        <select name="select_version_name" class="form-control" id="select_version_name">
+                        <select name="jira_version" class="form-control" id="jira_version">
                             {% for item in version_names %}
-                                <option value="{{ item }}">{{ item }}</option>
+                                {% if item == project.jira_version %}
+                                    <option value="{{ item }}" selected>{{ item }}</option>
+                                {% else %}
+                                    <option value="{{ item }}">{{ item }}</option>
+                                {% endif %}
                             {% endfor %}
                         </select>
                     </div>
