render text font style for print

--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -551,6 +551,9 @@
                             events: {
                                 load: Highcharts.drawTable
                             },
+                            style: {
+                                fontFamily: 'serif'
+                            },
                             borderWidth: 0
                         },
                         title: {
