default color for pie chart

--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -534,7 +534,7 @@
                     };
 
                     Highcharts.setOptions({
-                        colors: ['#CC6600', '#00CCCC', '#CCCC00', '#000066', '#990099', '#006600']
+                        //colors: ['#CC6600', '#00CCCC', '#CCCC00', '#000066', '#990099', '#006600']
                     });
                     var pie_title;
                     if (parseInt({{ project.score }}) == 20 ) {
@@ -572,7 +572,7 @@
                         },
                         plotOptions: {
                             pie: {
-                                allowPointSelect: true,
+                                //allowPointSelect: true,
                                 cursor: 'pointer',
                                 center: ['50%', 100],
                                 size: '40%',
