application subcomponent info

--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -589,6 +589,17 @@
                         series: [{
                             type: 'pie',
                             name: 'Component Contribution',
+                            point: {
+                                events: {
+                                    click:function(e){
+                                        //alert(getJIRAName());
+                                        if (e.point.name=='Application' ){
+                                            location.href= e.point.name;
+                                            e.preventDefault();
+                                        }
+                                    }
+                                }
+                            },
                             data: data[0]
                         }],
                         navigation: {
