--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -592,7 +592,7 @@
                             point: {
                                 events: {
                                     click:function(e){
-                                        //alert(data[3]);
+                                        //data[3][0] - Jira name, data[3][1] - is_superuser
                                         if (e.point.name=='Application' && data[3][0]=='VISI' && data[3][1]==true){
                                             location.href= e.point.name;
                                             e.preventDefault();
