continue working on pie chart for sub components

--- a/ceeq/apps/projects/templates/project_sub_component_reports.html
+++ b/ceeq/apps/projects/templates/project_sub_component_reports.html
@@ -27,6 +27,9 @@
 
 {% block footer %}
     <script>
-        {% include 'apps_sub_components.js' %}
+        $.getJSON("{% url 'fetch_reports_subcomponents_pie' project.id %}").done(function(data){
+            draw_pie_chart_graph(data);
+        });
+        {% include 'project_sub_components.js' %}
     </script>
 {% endblock %}
