--- a/ceeq/apps/projects/templates/project_sub_component_apps.html
+++ b/ceeq/apps/projects/templates/project_sub_component_apps.html
@@ -6,7 +6,7 @@
     <div class="container">
         <br>
         <div class="row">
-            <legend>Sub Components Percentage to Applications</legend>
+            <legend>Sub Components Percentage to Applications - {{ project.name }}</legend>
         </div>
         <div id="apps_subcomponent_percentage_pie_chart" style="width: 800px; height: 600px; margin: 0 auto;">
             <div class="loading" style="text-align: center; margin-top: 10px;">
@@ -27,6 +27,7 @@
 
 {% block footer %}
     <script>
+        var title = 'Applications'
         $.getJSON("{% url 'fetch_apps_subcomponents_pie' project.id %}").done(function(data){
             draw_pie_chart_graph(data);
         });
