use static files for resource css etc.

--- a/ceeq/apps/core/templates/base.html
+++ b/ceeq/apps/core/templates/base.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 {% load admin_urls %}
 <!DOCTYPE html>
 <html lang="en">
@@ -5,10 +6,10 @@
         <title>CEEQ - {% block title %}{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
-        <link href="http://apps.qaci01.wic.west.com/static/common/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
-        <link href="http://apps.qaci01.wic.west.com/static/common/bootswatch/3.0.0/flatly/bootstrap.min.css" rel="stylesheet">
-        <link href="http://apps.qaci01.wic.west.com/static/quality/jqueryui/css/jquery-ui-1.9.2.custom.min.css" rel="stylesheet">
-        <link href="http://apps.qaci01.wic.west.com/static/common/dataTables/1.10.0/css/jquery.dataTables.css" rel="stylesheet">
+        <link href="{% static 'common/font-awesome/4.0.3/css/font-awesome.min.css' %}" rel="stylesheet">
+        <link href="{% static 'common/bootswatch/3.0.0/flatly/bootstrap.min.css' %}" rel="stylesheet">
+        <link href="{% static 'quality/jqueryui/css/jquery-ui-1.9.2.custom.min.css' %}" rel="stylesheet">
+        <link href="{% static 'common/dataTables/1.10.0/css/jquery.dataTables.css' %}" rel="stylesheet">
         <!--[if lt IE 9]>
             <script src="http://apps.qaci01.wic.west.com/static/common/bootstrap/3.0.0/assets/js/html5shiv.js"></script>
             <script src="http://apps.qaci01.wic.west.com/static/common/bootstrap/3.0.0/assets/js/respond.min.js"></script>
@@ -195,13 +196,13 @@
 
         </div>
 
-        <script src="http://apps.qaci01.wic.west.com/static/common/jquery/1.10.2/jquery.min.js"></script>
-        <script src="http://apps.qaci01.wic.west.com/static/common/bootstrap/3.0.3/dist/js/bootstrap.min.js"></script>
-        <script src="http://apps.qaci01.wic.west.com/static/quality/jqueryui/js/jquery-ui-1.10.4.js"></script>
-        <script src="http://apps.qaci01.wic.west.com/static/common/placeholders/3.0.0/placeholders.min.js"></script>
-        <script src="http://apps.qaci01.wic.west.com/static/common/highcharts/3.0.7/js/highcharts.js"></script>
-        <script src="http://apps.qaci01.wic.west.com/static/common/highcharts/3.0.7/js/exporting.js"></script>
-        <script src="http://apps.qaci01.wic.west.com/static/common/dataTables/1.10.0/js/jquery.dataTables.js"></script>
+        <script src="{% static 'common/jquery/1.10.2/jquery.min.js' %}"></script>
+        <script src="{% static 'common/bootstrap/3.0.3/dist/js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'quality/jqueryui/js/jquery-ui-1.10.4.js' %}"></script>
+        <script src="{% static 'common/placeholders/3.0.0/placeholders.min.js' %}"></script>
+        <script src="{% static 'common/highcharts/3.0.7/js/highcharts.js' %}"></script>
+        <script src="{% static 'common/highcharts/3.0.7/js/exporting.js' %}"></script>
+        <script src="{% static 'common/dataTables/1.10.0/js/jquery.dataTables.js' %}"></script>
 
         <script>
             $("#search-input").autocomplete({
