--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -592,7 +592,7 @@
                                 click:function(e){
                                     //data[3][0] - Jira name, data[3][1] - is_superuser
                                     //if (e.point.name=='Application' && data[3][0]=='VISI' && data[3][1]==true){
-                                    if (e.point.name!='Voice Slots' && data[3][1]==true){
+                                    if (e.point.name!='Voice Slots'){
                                         location.href= e.point.name;
                                         e.preventDefault();
                                     }
