--- a/ceeq/apps/core/templates/base.html
+++ b/ceeq/apps/core/templates/base.html
@@ -187,8 +187,8 @@
 
             <div class="footer-wrapper">
                 <div class="text-right text-muted">
-                    <p>Powered by Quality Engineering & Innovation |
-                        <i class="fa fa-bell" style="color: lightseagreen;"></i><a href="http://jira.west.com/browse/CONCORD"> Report</a> |
+                    <p>v 1.1 | Powered by Quality Engineering & Innovation |
+                        <i class="fa fa-bell" style="color: lightseagreen;"></i><a href="http://jira.west.com/browse/ceeq"> Report</a> |
                         <i class="fa fa-envelope text-primary" style="color: lightseagreen;"></i><a href="mailto:gpallapa@west.com; sliu@west.com?subject=QoS Feedback"> Contact </a>|
                         <a href="{% url 'help_faq' %}"><i class="fa fa-question"></i> FAQ</a></p>
                 </div>
