Add shortcut icon

--- a/ceeq/apps/core/templates/base.html
+++ b/ceeq/apps/core/templates/base.html
@@ -6,6 +6,7 @@
         <title>CEEQ - {% block title %}{% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
+        <link href="{% static 'common/CEEQ.ico' %}" rel="shortcut icon">
         <link href="{% static 'common/font-awesome/4.0.3/css/font-awesome.min.css' %}" rel="stylesheet">
         <link href="{% static 'common/bootswatch/3.0.0/flatly/bootstrap.min.css' %}" rel="stylesheet">
         <link href="{% static 'quality/jqueryui/css/jquery-ui-1.9.2.custom.min.css' %}" rel="stylesheet">
@@ -189,7 +190,7 @@
                 <div class="text-right text-muted">
                     <p>v 1.1 | Powered by Quality Engineering & Innovation |
                         <i class="fa fa-bell" style="color: lightseagreen;"></i><a href="http://jira.west.com/browse/ceeq"> Report</a> |
-                        <i class="fa fa-envelope text-primary" style="color: lightseagreen;"></i><a href="mailto:gpallapa@west.com; sliu@west.com?subject=QoS Feedback"> Contact </a>|
+                        <i class="fa fa-envelope text-primary" style="color: lightseagreen;"></i><a href="mailto:gpallapa@west.com; sliu@west.com?subject=CEEQ Feedback"> Contact </a>|
                         <a href="{% url 'help_faq' %}"><i class="fa fa-question"></i> FAQ</a></p>
                 </div>
             </div>
